# fasterlite

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/internal/: auth.py  db.py
app/routers/: tables.py
