[project]
name = "fasterlite"
version = "0.1.0"
description = "REST API for SQLite tables"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "aiosqlite>=0.19.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "uvicorn>=0.27.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["app"]